--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.username=postgres
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 spring.datasource.password=h4ck3rlnx
-spring.datasource.url=jdbc\:postgresql\://localhost/javaSMS
+spring.datasource.url=jdbc\:postgresql\://localhost/springSms
 spring.jpa.hibernate.ddl-auto=update
