--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-spring.datasource.password=h4ck3rlnx
+spring.datasource.password=mudar123
 spring.datasource.url=jdbc\:postgresql\://localhost/springSms
 spring.jpa.hibernate.ddl-auto=update
